fixed landing not showing in safari

--- a/site/themes/automato/static/less/styles.less
+++ b/site/themes/automato/static/less/styles.less
@@ -173,6 +173,9 @@ a:hover {
     .bg-img {
         background-position: center;
         background-size: cover;
+        -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
     }
 
     .overlay {
@@ -203,12 +206,18 @@ a:hover {
             height: 30em;
             width: 100%;
             background-size: cover;
+            -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
         }
     }
 }
 
 .bg-img {
     background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
 }
 
 
@@ -343,6 +352,9 @@ a:hover {
                     .owl-slide {
                         background-size: cover;
                         background-position: center;
+                        -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
                     }
                 }
             }
@@ -380,6 +392,9 @@ a:hover {
         .transition( background 1s);
         background-position: center;
         background-size: cover;
+        -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
         position: relative;
 
         &:hover {
@@ -599,6 +614,9 @@ a:hover {
         .thumb {
             background-position: center;
             background-size: cover;
+            -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
             min-height: 200px;
             background-color: @white;
             .transition (background-color 1s);
